test/Fail/Issue8454/B.agda
module Issue8454.B where

open import Issue8454.A

test : Type
test = Type
